<resources>
    <string name="app_name">Calendar Trigger</string>
    <string name="servicename">Calendar Trigger Background Server</string>
    <string name="typelog">log</string>
    <string name="typesettings">settings</string>
    <string name="lognodir">Cannot create %s file</string>
    <string name="lognodirdetail">exists but is a plain file</string>
    <string name="nocreatedetail">does not exist and cannot be created</string>
    <string name="nowrite">Cannot open %s file</string>
    <string name="new_event_class">New Event Class</string>
    <string name="create_it">Create</string>
    <string name="cancel_create">Cancel</string>
    <string name="settings">Debugging</string>
    <string name="lastcalldetail">Last called at %s</string>
    <string name="lastCallHelp">This is the time at which CalendarTrigger was
        most recently called, either directly by the user, or as a result of an
        alarm set by CalendarTrigger itself.</string>
    <string name="lastalarmdetail">Last alarm set for %s</string>
    <string name="lastAlarmHelp">This is the time of the alarm set by
        CalendarTrigger the last time it was called.</string>
    <string name="laststatedetail">Audio state last set to %s</string>
    <string name="lastStateHelp">This is the last audio state set by
        CalendarTrigger.</string>
    <string name="userstatedetail">Saved user state is %s</string>
    <string name="userStateHelp">This is the saved audio state last set by
        the user before CalendarTrigger changed it.</string>
    <string name="currentstatedetail">Current actual audio state is %s</string>
    <string name="currentStateHelp">This is the actual current audio
        state.</string>
    <string name="yeslocation">Monitoring location</string>
    <string name="nolocation">Not monitoring location</string>
    <string name="LocationStateHelp">This tells if CalendarTrigger currently
        has a pending location update request.</string>
    <string name="yeswakelock">Holding a wake lock</string>
    <string name="nowakelock">Not holding a wake lock</string>
    <string name="wakelockHelp">This tells if CalendarTrigger is holding a wake
        lock.</string>
    <string name="Logging">Logging to file %s</string>
    <string name="LoggingOn">On</string>
    <string name="loggingOnHelp">This enables logging. The log file directory
        and the log file itself are created when necessary if nonexistent.
        </string>
    <string name="cantLogHelp">Logging cannot be enabled because
        CalendarTrigger does not have permission to write to external
        storage. You can enable this permission from the device\'s Settings
        tool by selecting the Application Manager.
    </string>
    <string name="build_time">s</string>
    <string name="LoggingOff">Off</string>
    <string name="loggingOffHelp">This disables logging. The log file if it
		exists is not cleared.</string>
    <string name="clearLog">Clear Log</string>
    <string name="clearLogHelp">This button deletes the log file. The next
        attempt to write to the log will automatically recreate it, so this
        effectively clears the log.</string>
    <string name="noclearLogHelp">CalendarTrigger cannot clear the log because
        it does not have permission to write to external storage. You can enable
        this permission from the device\'s Settings tool by selecting the
        Application Manager.
    </string>
    <string name="logCleared">Log cleared</string>
    <string name="showLog">Show Log</string>
    <string name="showLogHelp">This button displays the log file in a scrolling
        window: press the back button to return to this screen.</string>
    <string name="noshowLogHelp">CalendarTrigger cannot show the log because
        it does not have permission to read external storage. You can enable
        this permission from the device\'s Settings tool by selecting the
        Application Manager.
    </string>
    <string name="nologfile">No log file (did you clear it?)</string>
    <string name="logcyclinglabel">Enable log cycling</string>
    <string name="logcyclinghelp">If checked, this option causes
        CalendarTrigger to once per day delete all log entries
        older than 24 hours. This can be used to leave logging active
        over along period without the log file getting too big.
    </string>
    <string name="logcyclingnotallowed">Log cycling cannot be enabled because
        CalendarTrigger does not have permission to read and write external
        storage. You can enable these permissions from the device\'s Settings
        tool by selecting the Application Manager.</string>
    <string name="logcyclingerror">Error cycling log</string>
    <string name="reset">Reset</string>
    <string name="resethelp">This button forces all classes to be inactive and
        stops all temporary waits. It is for use if the application gets stuck
        or if you have deleted a calendar event while it was active. Note that
        if you are between the start and finish times of a calendar event, any
        class(es) to which that event belongs will immediately become active
        again.</string>
    <string name="nextLocationLabel">Enable next location</string>
    <string name="nextLocationHelp">If checked, this option causes
        CalendarTrigger to create a virtual contact !NextEventLocation
        whose address is always the location of the next event in your
        calendar which has a nonempty location. This can be useful if
        you have a satnav which can navigate to the address of a
        contact from your phone.
    </string>
    <string name="nextLocationNotAllowed">The next location feature
        requires read and write permission on your contacts list, and cannot
        be enabled because CalendarTrigger does not have that permission.
        </string>
    <string name="savesettings">Save Settings</string>
    <string name="loadsettings">Load Settings</string>
    <string name="settingsfail">Exception opening settings file</string>
    <string name="saveSettingsHelp">This button writes CalendarTrigger\'s
        settings to a file.
    </string>
    <string name="noSaveSettingsHelp">CalendarTrigger cannot save
        settings because it does not have permission to write to
        external storage. You can enable this permission from the device\'s
        Settings tool by selecting the Application Manager.
    </string>
    <string name="loadSettingsHelp">This button deletes all of 
        CalendarTrigger\'s current settings and replaces them with the
        settings from the Settings file.
    </string>
    <string name="noLoadSettingsHelp">CalendarTrigger cannot load
        settings because it does not have permission to read from
        external storage. You can enable this permission from the device\'s
        Settings tool by selecting the Application Manager.
    </string>
    <string name="settingsfile">Settings file %s</string>
    <string name="packageinfofail">Exception getting signature</string>
    <string name="edit_event_class">Edit class %s</string>
    <string name="longpresslabel">Long press here for help information.</string>
    <string name="editclassHelp">This screen allows you to define the
        characteristics of class %s or delete it. When you have done, press
        the back button. A long press on any of the buttons below will bring up
        some help information about it.</string>
    <string name="deleteButtonLabel">Delete class %s (no undo)</string>
    <string name="deleteButtonHelp">This button deletes the class and
        cancels any actions scheduled for calendar events in this class. This
        action cannot be undone. The events themselves are not affected.
    </string>
    <string name="defineButtonLabel">Conditions for a calendar event to be in
        class %s</string>
    <string name="defineButtonHelp">Define the conditions for a calendar event
        to be in this class. An event can be in more than one class: in
        that case it will trigger the action(s) for each class it belongs to.
    </string>
    <string name="defineclasspopup">This screen allows you to specify the
        conditions for a calendar event to be in class %s. All conditions
        must be satisfied for the event to be in the class, but each condition
        has a default option which is satisfied by any event. When you have
        done, press the back button. A long press on any of the controls below
        will bring up some help information about it.</string>
    <string name="defineclasslist">An event is in class %s if:-</string>
    <string name="ifanycalendar">the event is in any of the calendars
        below which is checked</string>
    <string name="allcalendars">If no calendar is checked, the event
        can be in the class if it is in any calendar. Note that this is
        different from checking all calendars: if a new calendar is
        added later, it will not be checked unless you explicitly edit the
        class again.</string>
    <string name="eventnamehelp">An empty match string matches any
        event name or an event with no name at all.</string>
    <string name="eventnamefirst">the event name contains</string>
    <string name="eventnamenotfirst">and the event name contains</string>
    <string name="locationhelp">An empty match string matches any
        event location or an event with no location at all.</string>
    <string name="locationfirst">the event location contains</string>
    <string name="locationnotfirst">and the event location contains</string>
    <string name="descriptionlabel">and the event description contains</string>
    <string name="descriptionhelp">An empty match string matches any
        event description or an event with no description at all.</string>
    <string name="busyhelp">Determine whether events which are busy, not busy,
        or either (the default), are in this class.</string>
    <string name="busylabel">and the event is:</string>
    <string name="onlybusy">busy</string>
    <string name="onlynotbusy">not busy</string>
    <string name="busyandnot">either</string>
    <string name="recurrenthelp">Determine whether events which are recurrent,
        not recurrent, or either (the default), are in this class.</string>
    <string name="recurrentlabel">and the event is:</string>
    <string name="onlyrecurrent">recurrent</string>
    <string name="onlynotrecurrent">not recurrent</string>
    <string name="recurrentandnot">either</string>
    <string name="organiserhelp">Determine whether events for which you are the
        organiser, or not the organiser, or either (the default), are in this
        class.</string>
    <string name="organiserlabel">and the event\'s organiser is:</string>
    <string name="onlyorganiser">you</string>
    <string name="onlynotorganiser">not you</string>
    <string name="organiserandnot">either</string>
    <string name="privatehelp">Determine whether events which are private,
        public, or either (the default), are in this class.</string>
    <string name="privatelabel">and the event is:</string>
    <string name="onlyprivate">private</string>
    <string name="onlynotprivate">public</string>
    <string name="privateandnot">either</string>
    <string name="attendeeshelp">Determine whether events which have attendees,
        or do not have attendees, or either (the default), are in this class.
        </string>
    <string name="attendeeslabel">and the event has:</string>
    <string name="onlyattendees">attendees</string>
    <string name="onlynoattendees">no attendees</string>
    <string name="attendeesandnot">either</string>
    <string name="defineStartLabel">Event start definition for class %s</string>
    <string name="name">name</string>
</resources>