<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (c) 2016. Richard P. Parkins, M. A.
   Released under GPL V3 or later
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_class_name"
        android:hint="@string/name"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_it"
            android:id="@+id/create_button"
            android:gravity="left"
            android:layout_gravity="left"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_create"
            android:id="@+id/cancel_button"
            android:gravity="right"
            android:layout_gravity="right"/>
    </LinearLayout>

</LinearLayout>