<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (c) 2016. Richard P. Parkins, M. A.
   Released under GPL V3 or later
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|top"
        android:id="@+id/edit_activity_container">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_padding"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/settings" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/versiontext"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/lastcalltext"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/lastalarmtext"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/laststatetext"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/userstatetext"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/currentstatetext"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/locationtext"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/wakelocktext"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/logfiletext"/>
        <RadioGroup
            android:id="@+id/radioGroupLogging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioLoggingOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LoggingOn" />

            <RadioButton
                android:id="@+id/radioLoggingOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LoggingOff" />

        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/clear_log"
                android:layout_gravity="left"
                android:clickable="true"
                android:enabled="true"
                android:gravity="left"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/show_log"
                android:layout_gravity="right"
                android:gravity="right"
                android:clickable="true"
                android:enabled="true"/>
        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logcyclebox"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nextlocationbox"/>

        <Button
            android:text="Reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resetbutton"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save_settings"
                android:layout_gravity="left"
                android:clickable="true"
                android:enabled="true"
                android:gravity="left"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/load_settings"
                android:layout_gravity="right"
                android:gravity="right"
                android:clickable="true"
                android:enabled="true"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/savefiletext"/>
    </LinearLayout>

</ScrollView>